multiple panels ability implementation

--- a/p2/dev/sass/_character1.scss
+++ b/p2/dev/sass/_character1.scss
@@ -1,7 +1,7 @@
-.ax {
+.ax.ch1 {
   background: url("http://i.imgur.com/rVYNzUe.png");
   background-position: 50% 70%;
-  &:hover > .ch1 {
+  &:hover > .p2 {
     background: rgba(255, 192, 0, 0.7);
   }
 }
