--- a/p2/dev/sass/p2.css
+++ b/p2/dev/sass/p2.css
@@ -1,8 +1,8 @@
-.ax {
+.ax.ch1 {
   background: url("http://i.imgur.com/rVYNzUe.png");
   background-position: 50% 70%;
 }
-.ax:hover > .ch1 {
+.ax.ch1:hover > .p2 {
   background: rgba(255, 192, 0, 0.7);
 }
 
