--- a/fragments/dev/sass/fragments.css
+++ b/fragments/dev/sass/fragments.css
@@ -4,7 +4,7 @@
   padding: 30px 0;
 }
 #branding .main_width {
-  width: 100 !important;
+  width: 100% !important;
 }
 
 .box {
@@ -95,10 +95,10 @@
   opacity: 0.6;
   transition: all 1s;
 }
-.box > .characters > div :hover {
+.box > .characters > div:hover {
   transform: scale(1.2);
   opacity: 1;
   transition: all 1s;
 }
 
-/*# sourceMappingURL=particles.css.map */
+/*# sourceMappingURL=fragments.css.map */
