--- a/fragments/dev/sass/fragments.scss
+++ b/fragments/dev/sass/fragments.scss
@@ -18,7 +18,7 @@ $characters: (
   background-image: url('http://i.imgur.com/glruXeh.jpg');
   padding: 30px 0;
   .main_width {
-    width: 100 !important;
+    width: 100% !important;
   }
 }
 
@@ -56,7 +56,7 @@ $characters: (
       }
     }
     >div {
-      :hover {
+      &:hover {
         transform: scale(1.2);
         opacity: 1;
         transition: all 1s;
