--- a/css/slackify/src/_theme.scss
+++ b/css/slackify/src/_theme.scss
@@ -1,8 +1,8 @@
-$sidebarBackground: #303E4D;
-$sidebarHightlight: #3F4C5A;
-$onlineColor: #94E864;
-$sidebarActive: #6698C8;
-$notifyBackground: #78AF8F;
+$sidebarBackground: #4D5250;
+$sidebarHightlight: #474B49;
+$onlineColor: #99D04A;
+$sidebarActive: #D39B46;
+$notifyBackground: #DB6668;
 $notifyColor: #FFFFFF;
 $menuHighlight: #3AA3E3;
-$footerBackground: 'https://i.imgur.com/YaxcKzt.jpg';
+$footerBackground: 'http://i.imgur.com/vSAk4wO.jpg';
